--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "17.0.2",
-    "react-markdown": "5.0.3"
+    "react-markdown": "5.0.3",
+    "react-quill": "^1.3.5"
   }
 }
