--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "next": "10.1.3",
-    "react": "17.0.2",
+    "next": "^12.3.4",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.5.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.2.0",
     "react-markdown": "5.0.3"
   }
 }
