--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "next": "^12.3.4",
-    "react": "17.0.2",
-    "react-bootstrap": "^1.5.2",
-    "react-dom": "17.0.2",
-    "react-markdown": "5.0.3"
+    "bootstrap": "^5.3.8",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-bootstrap": "^2.10.10",
+    "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "unist-util-visit-parents": "^6.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.3"
   }
 }
